Bump mirror version and adjust code